On init, make a hidden copy of the messages div so we get the correct spacing

--- a/visualize.css
+++ b/visualize.css
@@ -21,7 +21,11 @@ td {
     width:              auto;
     background-color:   white;
     border:             1px solid black;
+}
+#messages {
     position:           fixed;
     bottom:             0;
 }
-
+#messages-spacing {
+    visibility:            hidden;
+}
